# MovieWeb

./: .dockerignore  .gitignore  Dockerfile  app.py  config.py  db.sh  docker-compose.yml  docker.compose.dev.yml  pyproject.toml
db/: create_users_api.py  init.cypher  init_db.py
frontend/: .dockerignore  .env.development  Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/app/: layout.tsx  root.tsx  routes.ts
frontend/app/apollo/: client.tsx
frontend/app/components/: ListSection.tsx  MovieCard.tsx
frontend/app/routes/: actor.tsx  director.tsx  home.tsx  login.tsx  movie.tsx  profile.tsx  register.tsx  user.tsx
frontend/app/slice/: authSlice.tsx
frontend/app/store/: authStore.tsx
gql/: error_formatter.py  resolvers.py  schema.graphql  schema.py
gql/resolvers/: __init__.py  movie_resolvers.py  types.py  user_resolver.py
helpers/: utils.py
neo4j/: init.cypher
repositories/: ActorRepository.py  DirectorRepository.py  MovieRepository.py  UserRepository.py
repositories/mixins/: ActorDirectorMixin.py  MovieQueryMixin.py  PrefixMixin.py  __init__.py
routes/: auth.py
scripts/: recalculate_movie_ratings.py
